# auto-manual-dictionary

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/examples/: concept_entry.example.json
docs/adr/: 0001-python-only-local-first.md
docs/architecture/: architecture.md  data-model.md
docs/examples/: review-ready-example.md
docs/plans/: implementation-plan.md
docs/reviews/: contrarian-review-2026-04-30.md
docs/specs/: functional-spec.md  operations-workflow.md  quantitative-goals.md  requirements.md  review-queue.md  search-integration.md
docs/testing/: evaluation-plan.md  test-strategy.md
examples/: README.md  sample_dictionary.jsonl  sample_review.csv
src/auto_manual_dict/: __init__.py  anchors.py  block_matcher.py  cli.py  concepts.py  confidence.py  db.py  export.py  html_extract.py  ingest.py  page_matcher.py  review.py  term_extract.py
tests/: test_anchors.py  test_block_matcher.py  test_cli.py  test_cli_ingest.py  test_cli_match.py  test_cli_terms.py  test_concepts.py  test_confidence.py  test_db.py  test_documentation_examples.py  test_e2e.py  test_html_extract.py  test_ingest.py  test_page_matcher.py  test_review_export.py  test_term_extract.py
tests/fixtures/en/: airbag.html  brake_fluid.html  engine_no_start.html  engine_no_start_a.html  engine_no_start_b.html  hub_nut.html  unmatched_en.html
tests/fixtures/ja/: airbag.html  brake_fluid.html  engine_no_start.html  hub_nut.html  no_start.html  unmatched_jp.html
